--- a/advanced/exercise_2/index.html
+++ b/advanced/exercise_2/index.html
@@ -15,7 +15,7 @@
     </header><!-- /header -->
     <nav>
         <ul>
-            <li><a href="#" title="//shortlist"></a>//shortlist</li>
+            <a href="#" title="//shortlist"><li>//shortlist</li></a>
             <li><a href="#" title="Meinung"></a>Meinung</li>
             <li><a href="#" title="Österreich"></a>Österreich</li>
             <li><a href="#" title="Wirtschaft"></a>Wirtschaft</li>
@@ -26,6 +26,7 @@
             <li><a href="#" title="Portfolio"></a>Portfolio</li>
         </ul>
     </nav>
+	
     <div id="anzeige">
         <div id="werbung">
             <img src="porsche.jpg" id="werbung_bild">
