--- a/advanced/exercise_2/index.html
+++ b/advanced/exercise_2/index.html
@@ -13,6 +13,7 @@
         <h1>Profil</h1>
         <input type="text" name="search" placeholder="Search...." id="search">
     </header><!-- /header -->
+	
     <nav>
         <ul>
             <a href="#" title="//shortlist"><li>//shortlist</li></a>
@@ -27,66 +28,88 @@
         </ul>
     </nav>
 	
-    <div id="anzeige">
-        <div id="werbung">
-            <img src="porsche.jpg" id="werbung_bild">
-            <p>Holen sie sich ihren fancy Porsche!!</p>
+	<main>
+		<div id="anzeige">
+			<div class="center">
+				<img src="porsche.jpg">
+				<p>Holen sie sich ihren fancy Porsche!!</p>
+			</div>
+			
+			<div class="center">
+				<img src="urlaub.jpg">
+				<p>Fahren Sie auf Urlaub!!</p>
+			</div>
+				
+			<div class="center">
+				<img src="motorcycle.jpg">
+				<p>Holen Sie sich ein Motorrad!!</p>
+			</div>
+		</div>
+	
+		<div id="content">
+			<div id="Hauptartikel">
+				<img src="artikel1.jpg">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
+			
+			<div id="shortlist">
+				<p>test</p>
+			</div>
+			
+			
+			
+			
+			
+			<div class="artikel">
+				<img src="artikel2.jpg" id="werbung_bild">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
+			
+			<div class="artikel">
+				<img src="artikel3.jpg" id="werbung_bild">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
+			
+			<div id="Heftinhalt">
+				<div>
+					<h5>Heftinhalt</h5>
+				</div>
+				<div>
+					<ul>
+						<li>lorem</li>
+						<li>lorem</li>
+						<li>lorem</li>
+						<li>lorem</li>
+						<li>lorem</li>
+					</ul>
+				</div>
+			</div>
+			
+			
+			<div id="podcast">
+				<hr>
+				<hr>
+			</div>
+			<div id="artikel">
+				<img src="artikel4.jpg" id="werbung_bild">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
+		
+		
+		
+		
+        <div id="artikel">
         </div>
         <div id="werbung">
-            <img src="urlaub.jpg" id="werbung_bild">
-            <p>Fahren Sie auf Urlaub!!</p>
-        </div>
-        <div id="werbung">
-            <img src="motorcycle.jpg" id="werbung_bild">
-            <p>Holen Sie sich ein Motorrad!!</p>
         </div>
     </div>
-    <div id="content">
-        <div id="Hauptartikel">
-        	<img src="artikel1.jpg" id="werbung_bild">
-        	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        	tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div id="shortlist">
-        </div>
-        <div id="artikel">
-        	<img src="artikel2.jpg" id="werbung_bild">
-        	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        	tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div id="artikel">
-        	<img src="artikel3.jpg" id="werbung_bild">
-        	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        	tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div id="Heftinhalt">
-        	<div>
-        		<h5>Heftinhalt</h5>
-        	</div>
-        	<div>
-        		<ul>
-        			<li>lorem</li>
-        			<li>lorem</li>
-        			<li>lorem</li>
-        			<li>lorem</li>
-        			<li>lorem</li>
-        		</ul>
-        	</div>
-        </div>
-        <div id="podcast">
-        	<hr>
-        	<hr>
-        </div>
-        <div id="artikel">
-        	<img src="artikel4.jpg" id="werbung_bild">
-        	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        	tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div id="artikel">
-        </div>
-        <div id="werbung">
-        </div>
-    </div>
+	</main>
+	<footer>
+	</footer>
 </body>
 
 </html>
